# git-skel

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  azure-pipelines.yml
.github/workflows/: regression.yml
src/: config.rs  error.rs  file.rs  main.rs
