[package]
name = "git-skel"
version = "0.1.7-pre"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/git-skel"
keywords = ["git"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
description = "a git subcommand to apply skeleton repository continuously"
edition = "2021"

[dependencies]
console       = "0.15"
failure       = "0.1"
git2          = "0.17"
ignore        = "0.4"
openssl-probe = "0.1"
serde         = {version = "1.0", features = ["derive"]}
structopt     = "0.3"
tempfile      = "3"
toml          = "0.7"

[package.metadata.release]
dev-version-ext            = "pre"
pre-release-commit-message = "Prepare to v{{version}}"
pro-release-commit-message = "Start next development iteration v{{version}}"
tag-message                = "Bump version to {{version}}"
tag-prefix                 = "v"
pre-release-replacements = [
    {file="CHANGELOG.md", search="Unreleased", replace="v{{version}}"},
    {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
    {file="CHANGELOG.md", search="Change Log", replace="Change Log\n\n## [Unreleased](https://github.com/dalance/procs/compare/v{{version}}...Unreleased) - ReleaseDate"},
]
